[tool.poetry]
name = "pympeg"
version = "0.0.1"
description = "This is a basic tool to interactively prepare and run ffmpeg/ffprobe commands on multiple files in succession."
authors = ["Émilia Decaudin <me@edecaud.in>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
inquirer = "^2.8.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
